--- a/index.html
+++ b/index.html
@@ -185,9 +185,9 @@
 
     <section id="portfolio">
         <div class="container">
-            <h2>Portfolio</h2>
+            <h2>Projects Made</h2>
             <p>
-                Portfolio section is categorized based on hosted and practice projects or not hosted yet (for practice
+                Project section is categorized based on hosted and practice projects or not hosted yet (for practice
                 purposes only) that are still on
                 my local machine. Hosted projects has links under the project's picture.
             </p>
