--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                     LEARNING (ML) and ARTIFICIAL INTELLIGENCE (AI) in Python and Javascript and data science/data
                     analysis.
                 </p>
+                <a href="./img/markjasonresume.pdf" downlaod>
+                    <button><i class="fa fa-download"></i> My Resume in PDF</button>
+                </a>
             </div>
         </div>
     </section>
