--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     LEARNING (ML) and ARTIFICIAL INTELLIGENCE (AI) in Python and Javascript and data science/data
                     analysis.
                 </p>
-                <a href="./img/markjasonresume.pdf" downlaod>
+                <a href="./img/markjasonresumeUPDATED.pdf" downlaod>
                     <button><i class="fa fa-download"></i> My Resume in PDF</button>
                 </a>
             </div>
@@ -220,54 +220,6 @@
                         </p>
                     </div>
                     <div class="square">
-                        <img src="./img/hosted/dixie2.PNG" alt=""><br>
-                        <a href="https://mjdixie.netlify.app/">
-                            https://mjdixie.netlify.app/
-                        </a><br>
-                        <b>Dixie (2)</b><br>
-                        <p>
-                            Dixie is a well trained AI Chatbot that can understand human conversation. Her purpose
-                            is to be my personal assistant that helps me organize my tasks. Currently I'm still
-                            upgrading her
-                            intellegence
-                            so that she can respond to complicated chat accurately. It's a progressive web app so it can
-                            run on mobile and desktop online/offline. (Add task)
-                        </p>
-                    </div>
-                    <div class="square">
-                        <img src="./img/hosted/dixie3.PNG" alt=""><br>
-                        <a href="https://mjdixie.netlify.app/">
-                            https://mjdixie.netlify.app/
-                        </a><br>
-                        <b>Dixie (3)</b><br>
-                        <p>
-                            Dixie is a well trained AI Chatbot that can understand human conversation. Her purpose
-                            is to be my personal assistant that helps me organize my tasks. Currently I'm still
-                            upgrading her
-                            intellegence
-                            so that she can respond to complicated chat accurately. It's a progressive web app so it can
-                            run on mobile and desktop online/offline. (View tasks)
-                        </p>
-                    </div>
-                </div>
-
-                <!-- FIRST =====================================================================================================================-->
-
-                <div class="squares">
-                    <div class="square">
-                        <img src="./img/c1.PNG" alt=""><br>
-                        <a href="https://covidsymps.netlify.app/">
-                            https://covidsymps.netlify.app/
-                        </a><br>
-                        <b>Covid 19 Predictor (1)</b><br>
-                        <p>
-                            A progresive web app (for mobile and pc) that uses artificial neural network (Brain.js
-                            library) for diagnosing the common
-                            symptoms of Covid19 and outputs a probability from 0 - 99% if the patient is infected or
-                            not. Can work offline if installed. (Question page)
-                        </p>
-                    </div>
-                    <div class="square">
                         <img src="./img/c2.PNG" alt=""><br>
                         <a href="https://covidsymps.netlify.app/">
                             https://covidsymps.netlify.app/
@@ -281,24 +233,6 @@
                         </p>
                     </div>
                     <div class="square">
-                        <img src="./img/c3.PNG" alt=""><br>
-                        <a href="https://covidsymps.netlify.app/">
-                            https://covidsymps.netlify.app/
-                        </a><br>
-                        <b>Covid 19 Predictor (3)</b><br>
-                        <p>
-                            A progresive web app (for mobile and pc) that uses artificial neural network (Brain.js
-                            library) for diagnosing the common
-                            symptoms of Covid19 and outputs a probability from 0 - 99% if the patient is infected or
-                            not. Can work offline if installed. (Prediction Result: infected)
-                        </p>
-                    </div>
-                </div>
-
-                <!-- SECOND =======================================================================================================================-->
-
-                <div class="squares">
-                    <div class="square">
                         <img src="./img/hosted/todo1.PNG" alt=""><br>
                         <a href="https://apptodoinstall.netlify.app/">
                             https://apptodoinstall.netlify.app/
@@ -309,6 +243,22 @@
                             Installable like a normal mobile or desktop application and uses browser's memory cache and
                             localstorage API for
                             offline capabilities.
+                        </p>
+                    </div>
+                </div>
+
+                <!-- FIRST =====================================================================================================================-->
+
+                <div class="squares">
+                    <div class="square">
+                        <img src="./img/hosted/enventa2.PNG" alt=""><br>
+                        <a href="https://enventa.netlify.app/">
+                            https://enventa.netlify.app/ (mobile view only)
+                        </a><br>
+                        <b>Enventa (1)</b><br>
+                        <p>
+                            A single page static website, serverless ecommerce site. Designed for mobile views.
+                            (Responsive Website)
                         </p>
                     </div>
                     <div class="square">
@@ -322,22 +272,6 @@
                         </p>
                     </div>
                     <div class="square">
-                        <img src="./img/hosted/enventa2.PNG" alt=""><br>
-                        <a href="https://enventa.netlify.app/">
-                            https://enventa.netlify.app/ (mobile view only)
-                        </a><br>
-                        <b>Enventa (1)</b><br>
-                        <p>
-                            A single page static website, serverless ecommerce site. Designed for mobile views.
-                            (Responsive Website)
-                        </p>
-                    </div>
-                </div>
-
-                <!-- THIRD =======================================================================================================================-->
-
-                <div class="squares">
-                    <div class="square">
                         <img src="./img/hosted/mjh1.PNG" alt=""><br>
                         <a href="https://mjthehandsome.netlify.app/">
                             https://mjthehandsome.netlify.app/
@@ -347,6 +281,11 @@
                             A single page static website. Static website blog.
                         </p>
                     </div>
+                </div>
+
+                <!-- THIRD =======================================================================================================================-->
+
+                <div class="squares">
                     <div class="square">
                         <img src="./img/hosted/mms1.PNG" alt=""><br>
                         <a href="https://mjministore.netlify.app/">
@@ -367,11 +306,6 @@
                             My old freelance portfolio, when I knew only front end web development.
                         </p>
                     </div>
-                </div>
-
-                <!-- FOURTH =======================================================================================================================-->
-
-                <div class="squares">
                     <div class="square">
                         <img src="./img/hosted/c1.PNG" alt=""><br>
                         <b>CheMJ (1)</b><br>
