--- a/index.html
+++ b/index.html
@@ -442,14 +442,14 @@
         </div>
     </section>
 
-    <section class="blogPosts">
+    <!-- <section class="blogPosts">
         <div class="container">
             <h2>My Blog</h2>
-            <div class="owl-carousel">
+            <div class="owl-carousel"> -->
 
                 <!-- item -->
 
-                <div class="item">
+                <!-- <div class="item">
                     <div class="img">
                         <img src="./img/new.jpg" alt="">
                     </div>
@@ -466,7 +466,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <div class="container">
